# DanceVision_App

./: .gitignore  .gitmodules  README.md  package-lock.json  package.json
React/DanceVison/src/components/: SeeVideosButton.jsx  UploadButton.jsx
React/DanceVison/src/hooks/: useFetchImages.jsx
React/DanceVison/src/pages/: SelectVideoPage.jsx
client/: .env_example  config.json  index.html  package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx  peerConnection.jsx
client/src/components/: CustomStepper.jsx  PrivateOutlet.jsx  TimeLine.jsx  TypeWriter.jsx
client/src/components/AvgScores/: AvgScores.jsx  AvgScores.module.css
client/src/components/CountdownDonut/: CountdownDonut.jsx  index.js  (+1 more)
client/src/hooks/: useDbDetailedScore.jsx  useDetailedScore.jsx  useFetchImages.jsx  useLeaderBoardData.jsx  useLogin.jsx  usePeerConnection.jsx  usePeerReceiver.jsx  usePersonalInformation.jsx  useReferenceVideo.jsx  useScoreChannel.jsx  useStatusChannel.jsx  useUserDanceScores.jsx  useUserVideo.jsx  useVideoFeed.jsx
client/src/pages/: HomePage.jsx  LiveDancePage.jsx  ScoringPage.jsx
client/src/stylesheets/: _colors.css  _reset.css  _typography.css
client/src/utils/: localstorage.jsx
pi/: manifest.json  rtc.js
python/: main.py
server/: README.md  main.py  pyproject.toml  webcam_consumer.py
server/src/dancevision_server/: dual_video_starter.py  environment.py  host_identifiers.py  local_stream_comparison.py  mongoServer.py  movement_channel.py  peer_connection.py  pose_detection_track.py  recorder.py  rest_server.py  score_aggregator.py  score_channel.py  score_estimator.py  session_description.py  stream_comparison.py  stream_consumer.py  stream_relay.py  stream_sender.py  thumbnail_creator.py  thumbnail_info.py  video_loader.py  video_saver.py  video_starter.py
server/src/dancevision_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
server/src/dancevision_server/connectors/: connector.py  live_stream_comparison.py  live_stream_sender.py  stream_comparison.py  stream_sender.py
server/src/dancevision_server/keypoint_responders/: keypoint_feedback.py  keypoint_naive.py  keypoint_responder.py  keypoint_score.py
server/src/dancevision_server/mux/: local_mux.py  mux.py  stream_mux.py
server/src/dancevision_server/planners/: basic_planner.py  fixed_planner.py  planner.py  reference_planner.py
server/uploads/keypoints/: sample1.txt  sample2.txt
server/webcam/: index.html  rtc.js
src/: App.jsx  UploadButton.jsx
(+55 files in other folders)
